fix infinite charge battery sprite, fix incorrect tooltip on battery switch flags

--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -5,7 +5,7 @@ entities.batteries/battery_switch.placements.name.down=Battery Switch (Down)
 entities.batteries/battery_switch.placements.name.left=Battery Switch (Left)
 entities.batteries/battery_switch.placements.name.right=Battery Switch (Right)
 entities.batteries/battery_switch.attributes.description.horizontal=Whether the switch is horizontally aligned. Vertical if not ticked.
-entities.batteries/battery_switch.attributes.description.alwaysFlag=If this is enabled, the switch will always set the flag "batterySwitch_(id)" when activated. Otherwise, it will only set the flag if persistent.
+entities.batteries/battery_switch.attributes.description.alwaysFlag=If this is enabled, the switch will always set the flag "batterySwitch_(room name):(id)" when activated. Otherwise, it will only set the flag if persistent.
 entities.batteries/battery_switch.attributes.description.rightSide=Whether the switch should be attached to the right side of the block as opposed to the left. Has no effect on vertical switches.
 entities.batteries/battery_switch.attributes.description.persistent=If this is enabled, the switch will stay activated when the room is reset.
 entities.batteries/battery_switch.attributes.description.ceiling=Whether the switch should be attached to the bottom side of the block as opposed to the top. Has no effect on horizontal switches.
