--- a/Ahorn/lang/en_gb.lang
+++ b/Ahorn/lang/en_gb.lang
@@ -1,6 +1,6 @@
 # Battery Switch
 placements.entities.batteries/battery_switch.tooltips.horizontal=Whether the switch is horizontally aligned. Vertical if not ticked.
-placements.entities.batteries/battery_switch.tooltips.alwaysFlag=If this is enabled, the switch will always set the flag \"batterySwitch_(id)\" when activated. Otherwise, it will only set the flag if persistent.
+placements.entities.batteries/battery_switch.tooltips.alwaysFlag=If this is enabled, the switch will always set the flag \"batterySwitch_(room name):(id)\" when activated. Otherwise, it will only set the flag if persistent.
 placements.entities.batteries/battery_switch.tooltips.rightSide=Whether the switch should be attached to the right side of the block as opposed to the left. Has no effect on vertical switches.
 placements.entities.batteries/battery_switch.tooltips.persistent=If this is enabled, the switch will stay activated when the room is reset.
 placements.entities.batteries/battery_switch.tooltips.ceiling=Whether the switch should be attached to the bottom side of the block as opposed to the top. Has no effect on horizontal switches.
